installed correct modules in virtual environment
RideBuddy v 1.0.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "AsyncStorage": "^0.1.5",
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "expo": "^52.0.18",
+    "expo-cli": "^4.0.17"
   }
 }
